# cve_finder

./: CMakeLists.txt  README.md  UF.code-workspace  main.cpp
src/: RedBlackTree.cpp  RedBlackTree.h  api_processor.cpp  api_processor.h  cve_data.h  cve_struct.h  data_processor.cpp  data_processor.h  file_checker.cpp  file_checker.h  main.cpp  trie.cpp  trie.h
